--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_riverpod: ^2.5.1
   go_router: ^14.3.0
   flutter_bloc: ^8.1.6
+  wifi_scan: ^0.4.1+2
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
