--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   wifi_scan: ^0.4.1+2
   http: ^1.4.0
+  open_settings: ^2.0.2
 
 dev_dependencies:
   flutter_test:
